--- a/.github/workflows/build_binaries.yaml
+++ b/.github/workflows/build_binaries.yaml
@@ -7,22 +7,14 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        keyboard:
-          - keebio/chiri_ce/rev1
-          - keebio/iris_ce/rev6
-    name: 'Build ${{ matrix.keyboard }}'
+    name: 'QMK Userspace Build'
     uses: qmk/.github/.github/workflows/qmk_userspace_build.yml@main
     with:
       qmk_repo: qmk/qmk_firmware
       qmk_ref: master
-      keyboard: ${{ matrix.keyboard }}
-      keymap: luke
-      keymap_introspection: false
 
   publish:
-    name: 'Publish Firmware Artifacts'
+    name: 'QMK Userspace Publish'
     uses: qmk/.github/.github/workflows/qmk_userspace_publish.yml@main
     if: always() && !cancelled()
     needs: build
